fix: disable body scrollbar by default when Drawer is open

--- a/components/products/ProductAdded/ProductAdded.module.css
+++ b/components/products/ProductAdded/ProductAdded.module.css
@@ -2,6 +2,7 @@
   padding: 30px;
   display: flex;
   width: 100%;
+  height: 100%;
   font-size: 0.9em;
 }
 
