--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,6 +65,17 @@ button.no-shadow {
   font-size: 12px;
 }
 
+.scrollbar-disabled {
+  overflow: hidden;
+  width: calc(100% - 15px);
+}
+
+@media (hover: none) {
+  .scrollbar-disabled {
+    width: 100%;
+  }
+}
+
 @media (max-width: 1555px) and (min-width: 1500px) {
   /* TODO workaround for layout shift due to empty scrollbar and resizes */
   html,
